# Slicer-CF

./: .env.example  .gitignore  CMakeLists.txt  README.md
Slicer/: Slicer.sln
src_c#/: WpfApp1.sln
src_c#/WpfApp1/: App.xaml  Clean.cs  Floor.cs  Formatter.cs  GCodeCommands.cs  GCodeConverter.cs  GCodeHelper.cs  Gcodecoverter.cs  Infill.cs  MainWindow.xaml  MainWindow.xaml.cs  Roof.cs  STLLoader.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  Slicer.cs  SlicerSettings.cs  WpfApp1.csproj
src_cpp/: README.md  object_reader.cpp  slicer.cpp
